--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -84,7 +84,7 @@ $color-black:#000000;
         display: flex;
         align-items: center;
         justify-content: space-between;
-       
+        font-size: 10px;
     } 
 }
 .button{
