--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -20,7 +20,7 @@ $color-black:#000000;
 }
 .landing{
     &__wrapper{
-        padding: 10px 20px;
+        padding: 10px 75px;
         display: flex;
         flex-direction: column;
     }
@@ -43,15 +43,14 @@ $color-black:#000000;
 
 .post{
     width: 500px;
-    height: 300px;
     border-radius: 40px;
     background-color: $color-light-grey;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    margin-left:20px;
     margin-bottom:20px;
     &__wrapper{
+        justify-content: space-between;
         display: flex;
         width: 100%;
         flex-wrap: wrap;
@@ -65,6 +64,7 @@ $color-black:#000000;
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        font-size: 14px;
         img{
             margin-right: 10px;
             border-radius: 50%;
@@ -73,7 +73,7 @@ $color-black:#000000;
     .content{
         color:$color-black;
         padding: 10px 20px;
-        height: 190px;
+        height: fit-content;
 
     }
     .footer{
@@ -105,6 +105,12 @@ $color-black:#000000;
     display: flex;
     flex-direction: column;
     padding:30px;
+    height: 300px;
+    width: 100%;
+    background-color: $color-light-grey;
+    border-radius: 40px;
+    margin-bottom:20px;
+
     textarea{
         border-radius: 20px;
         height: 150px;
